--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valentines2026",
-  "homepage": "https://andrewmo15.github.io/valentine2026/",
+  "homepage": "https://andrewmo15.github.io/valentines2026/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
